<resources>
    <string name="app_name">QBAS</string>
    <string name="sign_in">SIGN IN</string>
    <string name="nrp">sNrp</string>
    <string name="password">PIN</string>
    <string name="login">LOGIN</string>
    <string name="report">Report</string>
    <string name="qrscan">Scan QR</string>
    <string name="schedule">Schedule</string>
    <string name="setting">Setting</string>
    <string name="upcoming">Upcoming</string>
    <string name="upcomingclass">Upcoming Class</string>
    <string name="noclass">No class at the moment</string>
    <string name="classinprogress">Class in Progress</string>
    <string name="tagline">QR Based Attendance System</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Setting">setting</string>
    <string name="name">Name</string>
    <string name="attend">Attend</string>
    <string name="attendstatement">I attended this course</string>
    <string name="requestcode">Request Code</string>
    <string name="classcode">Class Code</string>
    <string name="copypasteclasscode">Enter this class code into QBAS website to record your attendances. Each code only last for 10 seconds. Use refresh code button to retrieve new code.</string>
    <string name="dismiss">Dismiss</string>
    <string name="refreshcode">Refresh Code</string>
    <string name="templatecoursename">Native Mobile Programming</string>
    <string name="templateschedule">Thursday, 06th May 2021</string>
    <string name="templateabsence">Attend</string>
    <string name="coursefeedback">Course Feedback</string>
    <string name="waktureal">Apakah waktu pembelajaran riil sesuai dengan jadwal?</string>
    <string name="lebihsedikit">Lebih Sedikit</string>
    <string name="setara">Setara</string>
    <string name="lebihbanyak">Lebih Banyak</string>
    <string name="topikreal">Apakah topik pembelajaran riil sesuai dengan topik yang tertulis di atas?</string>
    <string name="templatetopik">Topik: ABC</string>
    <string name="aksesmateri">Seberapa mudah akses untuk mengambil materi perkuliahan ini di platform ULS?</string>
    <string name="belumada">Belum Ada</string>
    <string name="tidaklengkap">Ada, tidak lengkap</string>
    <string name="lengkap">Lengkap</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="update">Update</string>
</resources>